--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,18 @@
-name: build
+name: Build
 
-on:
-  push:
-    branches:
-    - test/Git-Action
-  pull_request:
+on: [push]
 
 jobs:
-  validate:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout the source code
-      uses: actions/checkout@v4
-    - name: Validate SQF
-      run: python3 tools/sqf_validator.py
-    - name: Validate Config
-      run: python3 tools/config_style_checker.py
-    - name: Validate Stringtables
-      run: python3 tools/stringtable_validator.py
+      - uses: actions/checkout@v2
+      - name: Setup HEMTT
+        uses: arma-actions/hemtt@v1
+      - name: Run HEMTT build
+        run: hemtt release
+      - name: Upload Release
+        uses: actions/upload-artifact@v4
+        with:
+          name: my-mod-latest
+          path: release/my-mod-latest.zip
