--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,16 +3,10 @@ name: Build
 on: [push]
 
 jobs:
-  build:
+  test-sqflint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup HEMTT
-        uses: arma-actions/hemtt@v1
-      - name: Run HEMTT build
-        run: hemtt release
-      - name: Upload Release
-        uses: actions/upload-artifact@v4
-        with:
-          name: my-mod-latest
-          path: release/my-mod-latest.zip
+      - uses: actions/checkout@master
+
+      - uses: arma-actions/sqflint@v1.0
+        name: Validate with SQFLint
