--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,19 +3,39 @@ name: Build
 on: [push]
 
 jobs:
-  build:
+  validate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup HEMTT
-        uses: arma-actions/hemtt@v1
-      - name: Run HEMTT build
-        run: hemtt release --no-rap --no-bin
-      - name: Upload Release
-        uses: actions/upload-artifact@v4
-        with:
-          name: my-mod-latest
-          path: release/my-mod-latest.zip
+    - name: Checkout the source code
+      uses: actions/checkout@v4
+    - name: Validate SQF
+      run: python3 tools/sqf_validator.py
+    - name: Validate Config
+      run: python3 tools/config_style_checker.py
+    - name: Validate Stringtables
+      run: python3 tools/stringtable_validator.py
+    - name: Check Strings
+      run: python3 tools/check_strings.py
+    - name: Check for BOM
+      uses: arma-actions/bom-check@master
+      with:
+        path: 'addons'
+    - name: Validate function headers
+      run: python3 docs/tools/document_functions.py --debug
+
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Setup HEMTT
+  #       uses: arma-actions/hemtt@v1
+  #     - name: Run HEMTT build
+  #       run: hemtt build
+  #     - name: Upload Release
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: my-mod-latest
+  #         path: release/my-mod-latest.zip
 
 # jobs:
 #   test-sqflint:
