--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,29 +3,27 @@ name: Build
 on: [push]
 
 jobs:
-  validate:
+  # validate:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Checkout the source code
+  #     uses: actions/checkout@v4
+  #   - name: Validate SQF
+  #     run: python3 tools/sqf_validator.py
+  #   - name: Check for BOM
+  #     uses: arma-actions/bom-check@master
+
+  build:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout the source code
       uses: actions/checkout@v4
-    - name: Validate SQF
-      run: python3 tools/sqf_validator.py
-    - name: Check for BOM
-      uses: arma-actions/bom-check@master
-
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Setup HEMTT
-  #       uses: arma-actions/hemtt@v1
-  #     - name: Run HEMTT build
-  #       run: hemtt build
-  #     - name: Upload Release
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: my-mod-latest
-  #         path: release/my-mod-latest.zip
+    - name: Setup HEMTT
+      uses: arma-actions/hemtt@v1
+    - name: Run HEMTT build
+      run: hemtt build
+    - name: Rename build folder
+      run: mv .hemttout/build .hemttout/@ace
 
 # jobs:
 #   test-sqflint:
