--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,13 +3,13 @@ name: Build
 on: [push]
 
 jobs:
-  validate:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout the source code
-      uses: actions/checkout@v4
-    - name: Validate SQF
-      run: python3 tools/sqf_validator.py
+  # validate:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Checkout the source code
+  #     uses: actions/checkout@v4
+  #   - name: Validate SQF
+  #     run: python3 tools/sqf_validator.py
 
   # build:
   #   runs-on: ubuntu-latest
@@ -23,13 +23,23 @@ jobs:
   #   - name: Rename build folder
   #     run: mv .hemttout/build .hemttout/@BCE
 
-# jobs:
-#   test-sqflint:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@master
-
-#       - uses: arma-actions/sqflint@v1.0
-#         name: Validate with SQFLint
-#         with:
-#           args: --exit e --directory functions
+  build:
+    runs-on: windows-2022
+    steps:
+      - name: Checkout the source code
+        uses: actions/checkout@v4.2.0
+        with:
+          fetch-depth: 1
+      - name: Set up A3Tools
+        uses: arma-actions/arma3-tools@master
+        with:
+          toolsUrl: ${{ secrets.A3TOOLS_URL }}
+      - name: Set up scons
+        run: python -m pip install scons
+      - name: Build with Scons
+        run: scons
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4.4.0
+        with:
+          name: BCE-${{ github.sha }}-nobin
+          path: artifact-BCE.zip
