--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: windows-2022
     steps:
       - name: Checkout the source code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.2.0
         with:
           fetch-depth: 1
       - name: Set up A3Tools
@@ -38,6 +38,8 @@ jobs:
         run: python -m pip install scons
       - name: Build with Scons
         run: scons
+      - name: Archive Release
+        uses: thedoctor0/zip-release@0.7.1
       - name: Upload Artifact
         uses: actions/upload-artifact@v4.4.0
         with:
