Fix artifact upload

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,10 @@ jobs:
         run: scons
       - name: Archive Release
         uses: thedoctor0/zip-release@0.7.1
+        with:
+          type: 'zip'
+          path: 'release'
+          filename: 'artifact-BCE.zip'
       - name: Upload Artifact
         uses: actions/upload-artifact@v4.4.0
         with:
