--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 *.bak
 *.zip
 *.cache
-release/*
-releases/*
 keys/*
 .hemtt/local
 *.pbo
@@ -16,3 +14,4 @@ Thumbs.db
 *.wav
 *.pkf
 *.hemttout
+*.releases
