Rename workflow from "Build" to "Check" and add new build workflow for pull request closure

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,9 +1,9 @@
-name: Build
+name: Check
 
 on: [push]
 
 jobs:
-    build:
+    Check:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
