Update workflows: modify build trigger and enhance check workflow setup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,10 @@
 name: Build
 
 on:
-  pull_request:
-    types:
-      - closed
+  push:
+    branches:
+    - main0.
+  pull_request_target:
 
 jobs:
     Build:
