--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,8 +4,16 @@ on: [push]
 
 jobs:
     Check:
-        runs-on: ubuntu-latest
+        runs-on: windows-latest
         steps:
+            - name: Checkout the source code
+              uses: actions/checkout@v4.2.0
+              with:
+                fetch-depth: 1
+            - name: Set up A3Tools
+              uses: arma-actions/arma3-tools@master
+              with:
+                toolsUrl: ${{ secrets.A3TOOLS_URL }}
             - uses: actions/checkout@v2
             - name: Setup HEMTT
               uses: arma-actions/hemtt@v1
