--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,5 +24,5 @@ jobs:
           uses: actions/upload-artifact@v4
           with:
             name: 'bce-${{github.sha}}-nobin'
-            path: '.hemttout/@*'
+            path: '.hemttout/@bce'
             include-hidden-files: true # Because .hemttout is a hidden directory
