--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,10 @@ name: Build
 on:
   workflow_dispatch:
   push:
-    branches:
-    - main
-  pull_request_target:
+  #   branches:
+  #     - main
+  # pull_request_target:
+
 jobs:
     build:
       runs-on: ubuntu-latest
