--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,23 +3,14 @@ name: Build
 on:
   workflow_dispatch:
     inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
+      branch:
+        description: "Repository branch (don't touch it if you don't know what it is!!!)"
+        required: false
         type: choice
         options:
-        - info
-        - warning
-        - debug
-      tags:
-        description: 'Test scenario tags'
-        required: false
-        type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
+        - main
+        - test
+        default: main
   push:
     branches:
       - main
